--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,6 +12,8 @@
         {% endblock %}
     </head>
     <body>
+        <div style="height: 40px; width: 100vw; background: grey;position: absolute; top: 0; left: 0;text-align: center">NAVBAR</div>
+        <div style="height:20px"></div>
         {% block body %}{% endblock %}
     </body>
 </html>
