--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,8 +12,8 @@
         {% endblock %}
     </head>
     <body>
-        <div style="height: 40px; width: 100vw; background: grey;position: absolute; top: 0; left: 0;text-align: center">NAVBAR</div>
-        <div style="height:20px"></div>
+        {{ include('navbar.html.twig') }}
+        
         {% block body %}{% endblock %}
     </body>
 </html>
