--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -3,17 +3,13 @@
 {% block title %}Register{% endblock %}
 
 {% block body %}
-    <h1>Register</h1>
+    <div class="form-login">
+        <h1>Register</h1>
 
-    {{ form_errors(registrationForm) }}
+        {{form(registrationForm)}}
 
-    {{ form_start(registrationForm) }}
-        {{ form_row(registrationForm.nom) }}
-        {{ form_row(registrationForm.plainPassword, {
-            label: 'Password'
-        }) }}
-        {{ form_row(registrationForm.agreeTerms) }}
-
-        <button type="submit" class="btn">Register</button>
-    {{ form_end(registrationForm) }}
+        <div style="padding: 10px">
+            <a href="{{ path('app_login') }}" >Go back to login</a>
+        </div>
+    </div>
 {% endblock %}
