--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Log in!{% endblock %}
 
 {% block body %}
-    <div class="form-login">
+    <div class="form form-login">
         <form method="post" style="">
             {% if app.user %}
                 <div class="mb-3">
