--- a/templates/evenement/edit.html.twig
+++ b/templates/evenement/edit.html.twig
@@ -3,11 +3,13 @@
 {% block title %}Edit Evenement{% endblock %}
 
 {% block body %}
-    <h1>Edit Evenement</h1>
+    <div class="form">
+        <h1>Edit Evenement</h1>
 
-    {{ include('evenement/_form.html.twig', {'button_label': 'Update'}) }}
+        {{ include('evenement/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('app_evenement_index') }}">back to list</a>
+        <a href="{{ path('app_evenement_index') }}">back to list</a>
 
-    {{ include('evenement/_delete_form.html.twig') }}
+        {{ include('evenement/_delete_form.html.twig') }}
+    </div>
 {% endblock %}
