--- a/templates/evenement/new.html.twig
+++ b/templates/evenement/new.html.twig
@@ -3,9 +3,11 @@
 {% block title %}New Evenement{% endblock %}
 
 {% block body %}
-    <h1>Create new Evenement</h1>
+    <div class="form">
+        <h1>Create new Evenement</h1>
 
-    {{ include('evenement/_form.html.twig') }}
+        {{ include('evenement/_form.html.twig') }}
 
-    <a href="{{ path('app_evenement_index') }}">back to list</a>
+        <a href="{{ path('app_evenement_index') }}">back to list</a>
+    </div>
 {% endblock %}
