--- a/templates/evenement/show.html.twig
+++ b/templates/evenement/show.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Evenement{% endblock %}
 
 {% block body %}
+<div style="width: 300px">
     <h1>Evenement</h1>
 
     <table class="table">
@@ -34,9 +35,11 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_evenement_index') }}">back to list</a>
+    <div class="action" style="display: flex; justify-content: space-between">
+        <a href="{{ path('app_evenement_edit', {'id': evenement.id}) }}">Edition</a>
 
-    <a href="{{ path('app_evenement_edit', {'id': evenement.id}) }}">edit</a>
-
+        <a href="{{ path('app_participation_add',{'id': evenement.id}) }}" style="background: green"> Add participation</a>
     {{ include('evenement/_delete_form.html.twig') }}
+    </div>
+</div>
 {% endblock %}
