--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Register{% endblock %}
 
 {% block body %}
-    <div class="form-login">
+    <div class="form form-login">
         <h1>Register</h1>
 
         {{form(registrationForm)}}
