ajout du footer
ajout du footer

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -16,4 +16,7 @@
         
         {% block body %}{% endblock %}
     </body>
+    <footer> 
+    <p > ce site a été developper par titouan MAGNIN et baptiste LAVAL</p>
+    </footer>
 </html>
