--- a/templates/evenement/_delete_form.html.twig
+++ b/templates/evenement/_delete_form.html.twig
@@ -1,4 +1,5 @@
-<form method="post" action="{{ path('app_evenement_delete', {'id': evenement.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" action="{{ path('app_evenement_delete', {'id': evenement.id}) }}"
+    onsubmit="return confirm('Are you sure you want to delete this item?');" style="width:100%">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ evenement.id) }}">
-    <button class="btn">Delete</button>
+    <button class="btn" style="background: red">Delete</button>
 </form>
