--- a/templates/evenement/edit.html.twig
+++ b/templates/evenement/edit.html.twig
@@ -8,8 +8,11 @@
 
         {{ include('evenement/_form.html.twig', {'button_label': 'Update'}) }}
 
-        <a href="{{ path('app_evenement_index') }}">back to list</a>
 
-        {{ include('evenement/_delete_form.html.twig') }}
+        <div style="display: flex">
+            {{ include('evenement/_delete_form.html.twig') }}
+        </div>
+        <a href="{{ path('app_evenement_index') }}" class="long-block">back to list</a>
+        
     </div>
 {% endblock %}
