--- a/templates/evenement/index.html.twig
+++ b/templates/evenement/index.html.twig
@@ -28,8 +28,7 @@
                 <td>{{ evenement.nbMax }}</td>
                 <td>{{ evenement.public ? 'Yes' : 'No' }}</td>
                 <td>
-                    <a href="{{ path('app_evenement_show', {'id': evenement.id}) }}">show</a>
-                    <a href="{{ path('app_evenement_edit', {'id': evenement.id}) }}">edit</a>
+                    <a href="{{ path('app_evenement_show', {'id': evenement.id}) }}" style="background: blue; color: white">show</a>
                 </td>
             </tr>
             {% endif %}
@@ -41,5 +40,9 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_evenement_new') }}">Create new</a>
+    {% if app.user %}
+        <div class="action" style="width: 200px">
+            <a href="{{ path('app_evenement_new') }}" class="long-block" style="background: orange">Create new</a>
+        </div>
+    {% endif %}
 {% endblock %}
