--- a/templates/evenement/new.html.twig
+++ b/templates/evenement/new.html.twig
@@ -8,6 +8,8 @@
 
         {{ include('evenement/_form.html.twig') }}
 
+
+            <button class="btn">Save</button>
         <a href="{{ path('app_evenement_index') }}">back to list</a>
     </div>
 {% endblock %}
