--- a/templates/evenement/show.html.twig
+++ b/templates/evenement/show.html.twig
@@ -35,11 +35,13 @@
         </tbody>
     </table>
 
-    <div class="action" style="display: flex; justify-content: space-between">
-        <a href="{{ path('app_evenement_edit', {'id': evenement.id}) }}">Edition</a>
-
+    <div class="action">
         <a href="{{ path('app_participation_add',{'id': evenement.id}) }}" style="background: green"> Add participation</a>
-    {{ include('evenement/_delete_form.html.twig') }}
+        
+        <a href="{{ path('app_evenement_index') }}">Return to list</a>
+        
+        <a href="{{ path('app_evenement_edit', {'id': evenement.id}) }}" style="background: orange">Edition</a>
     </div>
+        {{ include('evenement/_delete_form.html.twig') }}
 </div>
 {% endblock %}
