--- a/templates/evenement/show.html.twig
+++ b/templates/evenement/show.html.twig
@@ -32,16 +32,29 @@
                 <th>Public</th>
                 <td>{{ evenement.public ? 'Yes' : 'No' }}</td>
             </tr>
+            <tr>
+                <th>Proprietaire</th>
+                <th>{{ evenement.proprietaire.nom}}</th>
+            </tr>
+            <tr>
+                <th>Proprietaire</th>
+                <th>{{ evenement.users|length}}</th>
+            </tr>
         </tbody>
     </table>
 
     <div class="action">
+    {% if app.user and app.user in evenement.users %}
+        <a href="{{ path('app_participation_delete',{'id': evenement.id}) }}" style="background: red"> Remove participation</a>
+    {% else %}
         <a href="{{ path('app_participation_add',{'id': evenement.id}) }}" style="background: green"> Add participation</a>
-        
+    {% endif %}
         <a href="{{ path('app_evenement_index') }}">Return to list</a>
         
+    {% if app.user and app.user.id==evenement.proprietaire.id %}
         <a href="{{ path('app_evenement_edit', {'id': evenement.id}) }}" style="background: orange">Edition</a>
-    </div>
         {{ include('evenement/_delete_form.html.twig') }}
+    {% endif %}
+    </div>
 </div>
 {% endblock %}
