--- a/templates/participation/index.html.twig
+++ b/templates/participation/index.html.twig
@@ -27,8 +27,8 @@
                 <td>{{ evenement.nbMax }}</td>
                 <td>{{ evenement.public ? 'Yes' : 'No' }}</td>
                 <td>
-                    <a href="{{ path('app_evenement_show', {'id': evenement.id}) }}">show</a>
-                    <a href="{{ path('app_participation_delete', {'id': evenement.id}) }}">Delete inscription</a>
+                    <a href="{{ path('app_evenement_show', {'id': evenement.id}) }}" style="background: blue; color: white">show</a>
+                    <a href="{{ path('app_participation_delete', {'id': evenement.id}) }}" style="background: red; color: white">Delete inscription</a>
                 </td>
             </tr>
             {% endif %}
