--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,6 +17,6 @@
         {% block body %}{% endblock %}
     </body>
     <footer> 
-    <p > ce site a été developper par titouan MAGNIN et baptiste LAVAL</p>
+    <p > Ce site a été developpé par Titouan MAGNIN et baptIste LAVAL</p>
     </footer>
 </html>
