--- a/templates/evenement/new.html.twig
+++ b/templates/evenement/new.html.twig
@@ -1,10 +1,10 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Evenement{% endblock %}
+{% block title %}Creation Evenement{% endblock %}
 
 {% block body %}
     <div class="form">
-        <h1>Create new Evenement</h1>
+        <h1>Creer nouveau Evenement</h1>
 
         {{ include('evenement/_form.html.twig') }}
 
