--- a/templates/evenement/edit.html.twig
+++ b/templates/evenement/edit.html.twig
@@ -12,7 +12,7 @@
         <div style="display: flex">
             {{ include('evenement/_delete_form.html.twig') }}
         </div>
-        <a href="{{ path('app_evenement_index') }}" class="long-block">back to list</a>
+        <a href="{{ path('app_evenement_index') }}" class="long-block">Retour à la liste</a>
         
     </div>
 {% endblock %}
