--- a/templates/evenement/show.html.twig
+++ b/templates/evenement/show.html.twig
@@ -22,7 +22,7 @@
             </tr>
             <tr>
                 <th>Date</th>
-                <td>{{ evenement.date ? evenement.date|date('Y-m-d H:i:s') : '' }}</td>
+                <td>{{ evenement.date ? evenement.date|date('d-m-Y H:i:s') : '' }}</td>
             </tr>
             <tr>
                 <th>NbMax</th>
@@ -46,12 +46,12 @@
     <div class="action">
     {% if app.user %}
         {% if app.user in evenement.users %}
-            <a href="{{ path('app_participation_delete',{'id': evenement.id}) }}" style="background: red"> Remove participation</a>
+            <a href="{{ path('app_participation_delete',{'id': evenement.id}) }}" style="background: red"> Supprimer participation</a>
         {% else %}
-            <a href="{{ path('app_participation_add',{'id': evenement.id}) }}" style="background: green"> Add participation</a>
+            <a href="{{ path('app_participation_add',{'id': evenement.id}) }}" style="background: green"> Ajouter participation</a>
         {% endif %}
     {% endif %}
-        <a href="{{ path('app_evenement_index') }}">Return to list</a>
+        <a href="{{ path('app_evenement_index') }}">Retour à la liste</a>
         
     {% if app.user and app.user.id==evenement.proprietaire.id %}
         <a href="{{ path('app_evenement_edit', {'id': evenement.id}) }}" style="background: orange">Edition</a>
