--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,15 +1,15 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Register{% endblock %}
+{% block title %}Inscription{% endblock %}
 
 {% block body %}
     <div class="form form-login">
-        <h1>Register</h1>
+        <h1>Inscription</h1>
 
         {{form(registrationForm)}}
 
         <div style="padding: 10px">
-            <a href="{{ path('app_login') }}" >Go back to login</a>
+            <a href="{{ path('app_login') }}" >Retourner sur la page de connexion</a>
         </div>
     </div>
 {% endblock %}
