--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -12,7 +12,7 @@
             {% endif %}
 
             <h1 class="h3 mb-3 font-weight-normal">Connexion</h1>
-            <label for="username">Nom</label><br>
+            <label for="username">Email</label><br>
             <input type="text" value="{{ last_username }}" name="_username" id="username"
                 autocomplete="username" required autofocus><br>
             <label for="password">Mot de passe</label><br>
