--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -87,10 +87,25 @@ button{
     align-items: center;
     font-size: 1.2em;
 }
+@media screen and (max-width: 500px) {
+    .navbar {
+        font-size: 1em;
+    }
+}
 .navbar a{
     color: white;
     text-decoration: none;
 }
 .navbar a:hover{
     text-decoration: underline;
+}
+
+footer{
+    position: absolute;
+    bottom: 0;
+    padding: 5px 0;
+    color: white;
+    width: 100vw;
+    background: blue;
+    left: 0   
 }
